--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Seems that Google Reader will be closed, so unfortunately need to rewrite all this code :) Looking for another free rss reader...
+Allows to send your rss data from Google Reader to Kindle
